# libvmod-accept

./: CHANGES.rst  README.rst  configure.ac
src/: Makefile.am  vmod_accept.c  vmod_accept.vcc
src/tests/: test01.vtc  test02.vtc
